fix(client/rtl): toggle buttons out of bounds

--- a/apps/client/src/widgets/react/FormToggle.css
+++ b/apps/client/src/widgets/react/FormToggle.css
@@ -50,6 +50,10 @@
                 background 200ms ease-out;
 }
 
+body[dir=rtl] .switch-widget .switch-button:after {
+    --x: calc(var(--y) * -1);
+}
+
 .switch-widget .switch-button.on:after {
     --x: calc(var(--switch-track-width) - var(--switch-thumb-width) - var(--y));
 
